# myTools

./: .gitignore  CLAUDE.md  LICENSE  README.md
R/: find_dependencies.R  io_SE_feather.R  mergeMS.R
python/: .gitattributes  anndata2sqlite.py  claude_settings_switch.py  compress_video.py  convert_to_mtx.py  convert_video_gif.py  downloader.py  io_h5ad_feather.py  parseGTF.py  quarto_watch.py  sc_preprocess.ipynb  sc_preprocess.py  simple_http_server.py  split_file.py  sqlite_utils.py  tsv2md.py
python/deepseek_v3_tokenizer/: count_tokens.py
python/example/: chunk_adata_1000.db  chunk_adata_1000.h5ad
python/meeting-summary/: .env.example  README.md  pyproject.toml  test_meeting.txt
python/meeting-summary/src/meeting_summary/: __init__.py  __main__.py  parser.py  summarizer.py  translator.py  utils.py
shell/: extract_gene_from_gtf.sh
skills/: skills_manager.py
skills/ollama-vision/: SKILL.md
skills/ollama-vision/scripts/: ollama_crop.py  ollama_draw.py  ollama_vision.py
skills/remote-explore/: SKILL.md
skills/tmux-r-control/: SKILL.md
